--- a/companion/src/fwpreferencesdialog.ui
+++ b/companion/src/fwpreferencesdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>634</width>
-    <height>800</height>
+    <width>632</width>
+    <height>695</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -26,6 +26,26 @@
    <string>Download Firmware and Voice</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="verticalSpacing">
+    <number>2</number>
+   </property>
+   <property name="margin">
+    <number>6</number>
+   </property>
+   <item row="9" column="0" colspan="3">
+    <widget class="QLabel" name="label_2">
+     <property name="text">
+      <string>Options</string>
+     </property>
+    </widget>
+   </item>
+   <item row="40" column="6">
+    <widget class="QPushButton" name="ProfSave_PB">
+     <property name="text">
+      <string>Save Profile</string>
+     </property>
+    </widget>
+   </item>
    <item row="13" column="5">
     <widget class="QCheckBox" name="optionCheckBox_19">
      <property name="sizePolicy">
@@ -78,16 +98,6 @@
      </property>
     </widget>
    </item>
-   <item row="37" column="0" colspan="3">
-    <widget class="QLabel" name="label_16">
-     <property name="text">
-      <string>Hardware Profile Name</string>
-     </property>
-     <property name="alignment">
-      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-     </property>
-    </widget>
-   </item>
    <item row="9" column="5">
     <widget class="QCheckBox" name="optionCheckBox_3">
      <property name="sizePolicy">
@@ -103,6 +113,12 @@
    </item>
    <item row="35" column="3" colspan="2">
     <widget class="QComboBox" name="voiceCombo">
+     <property name="maximumSize">
+      <size>
+       <width>50</width>
+       <height>16777215</height>
+      </size>
+     </property>
      <property name="toolTip">
       <string>Set language of voice.
 May be different from firmware language</string>
@@ -135,7 +151,7 @@ May be different from firmware language</string>
    <item row="7" column="0" colspan="3">
     <widget class="QLabel" name="langLabel">
      <property name="text">
-      <string>Language</string>
+      <string>Menu Language</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -158,7 +174,7 @@ May be different from firmware language</string>
    <item row="35" column="0" colspan="3">
     <widget class="QLabel" name="voiceLabel">
      <property name="text">
-      <string>Voice</string>
+      <string>Voice Language</string>
      </property>
     </widget>
    </item>
@@ -191,8 +207,27 @@ May be different from firmware language</string>
      </property>
     </widget>
    </item>
+   <item row="18" column="3">
+    <widget class="QCheckBox" name="optionCheckBox_37">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="text">
+      <string>CheckBox</string>
+     </property>
+    </widget>
+   </item>
    <item row="29" column="3" colspan="2">
     <widget class="QComboBox" name="stickmodeCB">
+     <property name="maximumSize">
+      <size>
+       <width>190</width>
+       <height>16777215</height>
+      </size>
+     </property>
      <property name="whatsThis">
       <string>Mode selection:
 
@@ -239,10 +274,10 @@ Mode 4:
      </item>
     </widget>
    </item>
-   <item row="38" column="0" colspan="3">
+   <item row="39" column="0" colspan="3">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Storage Position</string>
+      <string>Profile Number</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -262,10 +297,16 @@ Mode 4:
      </property>
     </widget>
    </item>
-   <item row="9" column="0" colspan="3">
-    <widget class="QLabel" name="label_2">
+   <item row="9" column="4">
+    <widget class="QCheckBox" name="optionCheckBox_1">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
-      <string>Options</string>
+      <string>CheckBox</string>
      </property>
     </widget>
    </item>
@@ -277,18 +318,11 @@ Mode 4:
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-    </widget>
-   </item>
-   <item row="9" column="4">
-    <widget class="QCheckBox" name="optionCheckBox_1">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>CheckBox</string>
+     <property name="maximumSize">
+      <size>
+       <width>50</width>
+       <height>16777215</height>
+      </size>
      </property>
     </widget>
    </item>
@@ -320,6 +354,12 @@ Mode 4:
       <size>
        <width>0</width>
        <height>0</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>75</width>
+       <height>16777215</height>
       </size>
      </property>
      <property name="whatsThis">
@@ -484,9 +524,6 @@ This is used by the templated to determine which channel goes to what number out
    <item row="5" column="3" colspan="3">
     <widget class="QLineEdit" name="CPU_ID_LE"/>
    </item>
-   <item row="37" column="3" colspan="2">
-    <widget class="QLineEdit" name="ProfName_LE"/>
-   </item>
    <item row="19" column="4">
     <widget class="QCheckBox" name="optionCheckBox_42">
      <property name="sizePolicy">
@@ -515,19 +552,6 @@ This is used by the templated to determine which channel goes to what number out
    </item>
    <item row="12" column="4">
     <widget class="QCheckBox" name="optionCheckBox_14">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="text">
-      <string>CheckBox</string>
-     </property>
-    </widget>
-   </item>
-   <item row="18" column="3">
-    <widget class="QCheckBox" name="optionCheckBox_37">
      <property name="sizePolicy">
       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
        <horstretch>0</horstretch>
@@ -887,8 +911,14 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
-   <item row="38" column="3">
+   <item row="39" column="3">
     <widget class="QSpinBox" name="ProfSlot_SB">
+     <property name="maximumSize">
+      <size>
+       <width>50</width>
+       <height>16777215</height>
+      </size>
+     </property>
      <property name="minimum">
       <number>1</number>
      </property>
@@ -911,37 +941,6 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
-   <item row="37" column="6">
-    <widget class="QPushButton" name="import_PB">
-     <property name="text">
-      <string>Import</string>
-     </property>
-    </widget>
-   </item>
-   <item row="38" column="6">
-    <widget class="QPushButton" name="export_PB">
-     <property name="text">
-      <string>Export</string>
-     </property>
-    </widget>
-   </item>
-   <item row="39" column="6">
-    <widget class="QPushButton" name="ProfSave_PB">
-     <property name="text">
-      <string>Save Profile</string>
-     </property>
-    </widget>
-   </item>
-   <item row="42" column="6">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
-     </property>
-    </widget>
-   </item>
    <item row="31" column="3" colspan="3">
     <widget class="QCheckBox" name="renameFirmware">
      <property name="text">
@@ -956,6 +955,16 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
+   <item row="44" column="6">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+     </property>
+    </widget>
+   </item>
    <item row="8" column="3" colspan="4">
     <widget class="Line" name="line_4">
      <property name="orientation">
@@ -963,7 +972,7 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
-   <item row="41" column="3" colspan="4">
+   <item row="43" column="3" colspan="4">
     <widget class="Line" name="line_6">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -1004,6 +1013,13 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
+   <item row="32" column="6">
+    <widget class="QPushButton" name="fw_dnld">
+     <property name="text">
+      <string>Download FW</string>
+     </property>
+    </widget>
+   </item>
    <item row="18" column="6">
     <widget class="QCheckBox" name="optionCheckBox_40">
      <property name="sizePolicy">
@@ -1017,7 +1033,7 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
-   <item row="4" column="3">
+   <item row="4" column="3" colspan="4">
     <widget class="QLabel" name="FwInfo">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
@@ -1030,7 +1046,7 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
-   <item row="31" column="6">
+   <item row="3" column="6">
     <widget class="QPushButton" name="checkFWUpdates">
      <property name="minimumSize">
       <size>
@@ -1043,10 +1059,67 @@ This is used by the templated to determine which channel goes to what number out
      </property>
     </widget>
    </item>
-   <item row="32" column="6">
-    <widget class="QPushButton" name="fw_dnld">
+   <item row="38" column="0">
+    <widget class="QLabel" name="label_8">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="text">
-      <string>Download FW</string>
+      <string>Profile Splash Screen</string>
+     </property>
+    </widget>
+   </item>
+   <item row="37" column="0">
+    <widget class="QLabel" name="label_16">
+     <property name="text">
+      <string>Profile Name</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+     </property>
+    </widget>
+   </item>
+   <item row="38" column="3" colspan="3">
+    <widget class="QLineEdit" name="SplashFileName">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="37" column="3" colspan="3">
+    <widget class="QLineEdit" name="ProfName_LE"/>
+   </item>
+   <item row="40" column="5">
+    <widget class="QPushButton" name="export_PB">
+     <property name="text">
+      <string>Export</string>
+     </property>
+    </widget>
+   </item>
+   <item row="40" column="4">
+    <widget class="QPushButton" name="import_PB">
+     <property name="text">
+      <string>Import</string>
+     </property>
+    </widget>
+   </item>
+   <item row="38" column="6" colspan="2">
+    <widget class="QPushButton" name="SplashSelect">
+     <property name="text">
+      <string>Open Image</string>
+     </property>
+    </widget>
+   </item>
+   <item row="39" column="6">
+    <widget class="QPushButton" name="clearImageButton">
+     <property name="text">
+      <string>Clear Image</string>
      </property>
     </widget>
    </item>
@@ -1107,11 +1180,7 @@ This is used by the templated to determine which channel goes to what number out
   <tabstop>burnFirmware</tabstop>
   <tabstop>voiceCombo</tabstop>
   <tabstop>voice_dnld</tabstop>
-  <tabstop>ProfName_LE</tabstop>
-  <tabstop>import_PB</tabstop>
   <tabstop>ProfSlot_SB</tabstop>
-  <tabstop>export_PB</tabstop>
-  <tabstop>ProfSave_PB</tabstop>
  </tabstops>
  <resources>
   <include location="companion.qrc"/>
