Changing function names to make the code easier to read and understand. I am looking at simplifying the code for reading and writing firmware. There seems to be a few bugs...

--- a/companion/src/fwpreferencesdialog.ui
+++ b/companion/src/fwpreferencesdialog.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Downloads and Profiles</string>
+   <string>Downloads</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <property name="verticalSpacing">
